# spectra

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
src/: __init__.py  data.py  gpu_config.py  models.py  preprocessing.py  sdss_loader.py  train.py
tests/: __init__.py  conftest.py  test_data.py  test_models.py  test_preprocessing.py  test_sdss_loader.py
