[project]
name = "stellar-spectra-analyzer"
version = "0.1.0"
description = "Multi-task neural network for predicting stellar properties from SDSS spectra"
requires-python = ">=3.11"

dependencies = [
    # Core scientific stack
    "numpy>=1.21.0",
    "scipy>=1.7.0",
    "pandas>=1.3.0",
    "scikit-learn>=1.0.0",
    # Astronomy
    "astropy>=5.1.0",
    "astroquery>=0.4.6",
    "specutils>=1.11.0",
    # Visualisation
    "matplotlib>=3.7.0",
]

[project.optional-dependencies]
# TensorFlow build varies by platform; install manually or via `make install-tf`
tf = [
    "tensorflow>=2.13.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "mock>=4.0.3",
]

[tool.uv]
# uv resolves the dependency graph; lock file is committed for reproducibility.

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short --strict-markers"
markers = [
    "slow: marks tests as slow",
    "gpu: marks tests requiring GPU",
    "integration: marks tests as integration tests",
]
